# falcon_controller

./: CMakeLists.txt  package.xml
config/: default.rviz
launch/: mapper.launch  panda_falcon_setup.launch  prerequisites.launch  rviz.launch
obtained_data/: Information.txt
scripts/: calibration.py  calibration_center.py  eef_pose_publisher.py  falcon_absolute.py  falcon_visual.py  flip_mode.sh  gripper_control.py  mode_change.py  panda_mapped.py  panda_moveit.py  record.sh  test_moveIt.py  volume_node.py
srv/: ModeChange.srv
urdf/: setup.urdf.xacro
