<?xml version="1.0"?>
<package format="2">
  <name>falcon_controller</name>
  <version>0.0.1</version>
  <description>Nodes for Novint Falcon control and RViz markers.</description>

  <maintainer email="hri25-group1@todo.todo">hri25-group1</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Runtime/build deps used in your Python nodes -->
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <export/>
</package>
